    (Brahma Reddy Battula via stevel)

    HADOOP-11797. releasedocmaker.py needs to put ASF headers on output (aw)

    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
    time unit parameter. (zxu via rkanter)

    HADOOP-12087. [JDK8] Fix javadoc errors caused by incorrect or illegal
    tags. (Akira AJISAKA via stevel).

  OPTIMIZATIONS

    HADOOP-12051. ProtobufRpcEngine.invoke() should use Exception.toString()
    over getMessage() in logging/span events. (Varun Saxena via stevel)

    HADOOP-12017. Hadoop archives command should use configurable replication
    factor when closing (Bibin A Chundatt via vinayakumarb)

    HADOOP-12239. StorageException complaining " no lease ID" when updating
    FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)

    HADOOP-12245. References to misspelled REMAINING_QUATA in
    FileSystemShell.md. (Gabor Liptak via aajisaka)

    HADOOP-12175. FsShell must load SpanReceierHost to support tracing
    (Masatake Iwasaki via Colin P. McCabe)

    HADOOP-10945. 4-digit octal umask permissions throws a parse error (Chang
    Li via jlowe)

    HADOOP-7824. NativeIO.java flags and identifiers must be set correctly for
    each platform, not hardcoded to their Linux values (Martin Walsh via Colin
    P. McCabe)

    HADOOP-12268. AbstractContractAppendTest#testRenameFileBeingAppended
    misses rename operation. (Zhihai Xu)

    HADOOP-12274. Remove direct download link from BULIDING.txt.
    (Caleb Severn via aajisaka)

    HADOOP-12302. Fix native compilation on Windows after HADOOP-7824
    (Vinayakumar B via Colin P. McCabe)

    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)

    HADOOP-12322. typos in rpcmetrics.java. (Anu Engineer via
    Arpit Agarwal)

    HADOOP-12317. Applications fail on NM restart on some linux distro
    because NM container recovery declares AM container as LOST